--- a/Milana/Milana/css/style.css
+++ b/Milana/Milana/css/style.css
@@ -112,6 +112,17 @@ body {
           justify-content: space-between;
 }
 
+.page__list::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -520px;
+  width: 500px;
+  height: 100px;
+  background-color: white;
+  z-index: 10;
+}
+
 @media (max-width: 1800px) {
   .page__list {
     gap: 8px;
@@ -120,10 +131,9 @@ body {
 
 @media (max-width: 1600px) {
   .page__list {
-    gap: 5px;
+    gap: 7px;
     -ms-grid-columns: (minmax(40px, 1fr))[auto-fit];
         grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
-    padding: 10px 15px;
   }
 }
 
@@ -213,6 +223,20 @@ body {
   }
 }
 
+@media (max-width: 1315px) {
+  .list__item img {
+    width: 60px;
+    height: 30px;
+  }
+}
+
+@media (max-width: 655px) {
+  .list__item img {
+    width: 40px;
+    height: 20px;
+  }
+}
+
 @media (max-width: 386px) {
   .list__item img {
     width: 30px;
@@ -233,8 +257,8 @@ body {
 }
 
 .list__item:nth-child(1) {
-  -webkit-transform: translate(-150%, 0px);
-          transform: translate(-150%, 0px);
+  -webkit-transform: translate(-250%, 0px);
+          transform: translate(-250%, 0px);
   -webkit-animation: translate1 0.2s ease forwards;
           animation: translate1 0.2s ease forwards;
   -webkit-animation-delay: 0s;
@@ -242,8 +266,8 @@ body {
 }
 
 .list__item:nth-child(2) {
-  -webkit-transform: translate(-260%, 0px);
-          transform: translate(-260%, 0px);
+  -webkit-transform: translate(-360%, 0px);
+          transform: translate(-360%, 0px);
   -webkit-animation: translate2 0.2s ease forwards;
           animation: translate2 0.2s ease forwards;
   -webkit-animation-delay: 0.2s;
@@ -251,8 +275,8 @@ body {
 }
 
 .list__item:nth-child(3) {
-  -webkit-transform: translate(-370%, 0px);
-          transform: translate(-370%, 0px);
+  -webkit-transform: translate(-470%, 0px);
+          transform: translate(-470%, 0px);
   -webkit-animation: translate3 0.2s ease forwards;
           animation: translate3 0.2s ease forwards;
   -webkit-animation-delay: 0.4s;
@@ -260,8 +284,8 @@ body {
 }
 
 .list__item:nth-child(4) {
-  -webkit-transform: translate(-480%, 0px);
-          transform: translate(-480%, 0px);
+  -webkit-transform: translate(-580%, 0px);
+          transform: translate(-580%, 0px);
   -webkit-animation: translate4 0.2s ease forwards;
           animation: translate4 0.2s ease forwards;
   -webkit-animation-delay: 0.6s;
@@ -269,8 +293,8 @@ body {
 }
 
 .list__item:nth-child(5) {
-  -webkit-transform: translate(-590%, 0px);
-          transform: translate(-590%, 0px);
+  -webkit-transform: translate(-690%, 0px);
+          transform: translate(-690%, 0px);
   -webkit-animation: translate5 0.2s ease forwards;
           animation: translate5 0.2s ease forwards;
   -webkit-animation-delay: 0.8s;
@@ -278,8 +302,8 @@ body {
 }
 
 .list__item:nth-child(6) {
-  -webkit-transform: translate(-700%, 0px);
-          transform: translate(-700%, 0px);
+  -webkit-transform: translate(-800%, 0px);
+          transform: translate(-800%, 0px);
   -webkit-animation: translate6 0.2s ease forwards;
           animation: translate6 0.2s ease forwards;
   -webkit-animation-delay: 1s;
@@ -287,8 +311,8 @@ body {
 }
 
 .list__item:nth-child(7) {
-  -webkit-transform: translate(-810%, 0px);
-          transform: translate(-810%, 0px);
+  -webkit-transform: translate(-910%, 0px);
+          transform: translate(-910%, 0px);
   -webkit-animation: translate7 0.2s ease forwards;
           animation: translate7 0.2s ease forwards;
   -webkit-animation-delay: 1.2s;
@@ -305,8 +329,8 @@ body {
 
 @-webkit-keyframes translate1 {
   0% {
-    -webkit-transform: translate(-150%, 0px);
-            transform: translate(-150%, 0px);
+    -webkit-transform: translate(-250%, 0px);
+            transform: translate(-250%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -316,8 +340,8 @@ body {
 
 @keyframes translate1 {
   0% {
-    -webkit-transform: translate(-150%, 0px);
-            transform: translate(-150%, 0px);
+    -webkit-transform: translate(-250%, 0px);
+            transform: translate(-250%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -327,8 +351,8 @@ body {
 
 @-webkit-keyframes translate2 {
   0% {
-    -webkit-transform: translate(-260%, 0px);
-            transform: translate(-260%, 0px);
+    -webkit-transform: translate(-360%, 0px);
+            transform: translate(-360%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -338,8 +362,8 @@ body {
 
 @keyframes translate2 {
   0% {
-    -webkit-transform: translate(-260%, 0px);
-            transform: translate(-260%, 0px);
+    -webkit-transform: translate(-360%, 0px);
+            transform: translate(-360%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -349,8 +373,8 @@ body {
 
 @-webkit-keyframes translate3 {
   0% {
-    -webkit-transform: translate(-370%, 0px);
-            transform: translate(-370%, 0px);
+    -webkit-transform: translate(-470%, 0px);
+            transform: translate(-470%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -360,8 +384,8 @@ body {
 
 @keyframes translate3 {
   0% {
-    -webkit-transform: translate(-370%, 0px);
-            transform: translate(-370%, 0px);
+    -webkit-transform: translate(-470%, 0px);
+            transform: translate(-470%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -371,8 +395,8 @@ body {
 
 @-webkit-keyframes translate4 {
   0% {
-    -webkit-transform: translate(-480%, 0px);
-            transform: translate(-480%, 0px);
+    -webkit-transform: translate(-580%, 0px);
+            transform: translate(-580%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -382,8 +406,8 @@ body {
 
 @keyframes translate4 {
   0% {
-    -webkit-transform: translate(-480%, 0px);
-            transform: translate(-480%, 0px);
+    -webkit-transform: translate(-580%, 0px);
+            transform: translate(-580%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -393,8 +417,8 @@ body {
 
 @-webkit-keyframes translate5 {
   0% {
-    -webkit-transform: translate(-590%, 0px);
-            transform: translate(-590%, 0px);
+    -webkit-transform: translate(-690%, 0px);
+            transform: translate(-690%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -404,8 +428,8 @@ body {
 
 @keyframes translate5 {
   0% {
-    -webkit-transform: translate(-590%, 0px);
-            transform: translate(-590%, 0px);
+    -webkit-transform: translate(-690%, 0px);
+            transform: translate(-690%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -415,8 +439,8 @@ body {
 
 @-webkit-keyframes translate6 {
   0% {
-    -webkit-transform: translate(-700%, 0px);
-            transform: translate(-700%, 0px);
+    -webkit-transform: translate(-800%, 0px);
+            transform: translate(-800%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -426,8 +450,8 @@ body {
 
 @keyframes translate6 {
   0% {
-    -webkit-transform: translate(-700%, 0px);
-            transform: translate(-700%, 0px);
+    -webkit-transform: translate(-800%, 0px);
+            transform: translate(-800%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px);
@@ -437,8 +461,8 @@ body {
 
 @-webkit-keyframes translate7 {
   0% {
-    -webkit-transform: translate(-810%, 0px);
-            transform: translate(-810%, 0px);
+    -webkit-transform: translate(-910%, 0px);
+            transform: translate(-910%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px) rotate(0deg);
@@ -448,8 +472,8 @@ body {
 
 @keyframes translate7 {
   0% {
-    -webkit-transform: translate(-810%, 0px);
-            transform: translate(-810%, 0px);
+    -webkit-transform: translate(-910%, 0px);
+            transform: translate(-910%, 0px);
   }
   100% {
     -webkit-transform: translate(0, 0px) rotate(0deg);
@@ -505,8 +529,9 @@ body {
       align-self: center;
   margin-bottom: 20px;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 24px;
   color: palevioletred;
+  text-transform: uppercase;
   -webkit-transform: translate(-200%, 0px);
           transform: translate(-200%, 0px);
   -webkit-animation: trans1 0.8s ease forwards 2.7s;
@@ -1187,6 +1212,13 @@ body {
   padding: 14px;
 }
 
+.page__section04 {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-animation: visible 0.5s ease forwards 3s;
+          animation: visible 0.5s ease forwards 3s;
+}
+
 .section04_margin:not(:last-child) {
   margin-bottom: 119px;
 }
@@ -1294,4 +1326,94 @@ body {
   .sectio04__body:not(:last-child) {
     margin-bottom: 38px;
   }
+}
+
+@-webkit-keyframes visible {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+@keyframes visible {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 30px;
+  gap: 30px;
+  margin-bottom: 30px;
+}
+
+.footer__title {
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.footer__pic {
+  position: relative;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  height: 800px;
+  margin-bottom: 30px;
+  aspect-ratio: 1 / 1;
+  background-color: purple;
+  z-index: 10;
+  border-radius: 50%;
+  overflow: hidden;
+  -webkit-transform: translate(-200%, 0px);
+          transform: translate(-200%, 0px);
+  -webkit-animation: trans2 0.8s ease forwards 3s;
+          animation: trans2 0.8s ease forwards 3s;
+}
+
+@media (max-width: 600px) {
+  .footer__pic {
+    height: auto;
+  }
+}
+
+.footer__img {
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.footer__img:active {
+  opacity: 1;
+}
+
+.button {
+  width: 50%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
