--- a/Milana/Milana/scss/style.scss
+++ b/Milana/Milana/scss/style.scss
@@ -66,14 +66,24 @@ $Oswald: "Oswald",sans-serif;
       gap:35px;
       border: 2px solid #c4c4c4;
       justify-content: space-between;
-           //font-size: 0;
+      &::before{
+         content: "";
+         position: absolute;
+         top: 0;
+         left: -520px;
+         width: 500px;
+         height: 100px;
+         background-color: white;
+         z-index: 10;
+
+      }
       @media (max-width: 1800px) {
          gap: 8px;
       }
       @media (max-width: 1600px) {
-         gap: 5px;
+         gap: 7px;
          grid-template-columns: repeat(auto-fit, minmax(40px, 1fr));
-         padding:10px 15px;
+        
       }
        
    }
@@ -137,7 +147,15 @@ $Oswald: "Oswald",sans-serif;
         height: 30px;
       }
    img{
-   
+      @media (max-width: 1315px){
+         width: 60px;
+         height: 30px;
+      }
+
+      @media (max-width: 655px){
+         width: 40px;
+         height: 20px;
+      }
       @media (max-width: 386px){
       width: 30px;
       height: 15px;
@@ -151,38 +169,38 @@ $Oswald: "Oswald",sans-serif;
          height: auto;
       }
       &:nth-child(1) {
-         transform: translate(-150%, 0px);
+         transform: translate(-250%, 0px);
          animation: translate1 0.2s ease forwards;
          animation-delay: 0s;
       }
       &:nth-child(2) {
-         transform: translate(-260%, 0px);
+         transform: translate(-360%, 0px);
          animation: translate2 0.2s ease forwards;
          animation-delay: 0.2s;
       }
       &:nth-child(3) {
          
-         transform: translate(-370%, 0px);
+         transform: translate(-470%, 0px);
          animation: translate3 0.2s ease forwards;
          animation-delay: 0.4s;
       }
       &:nth-child(4) {
-         transform: translate(-480%, 0px);
+         transform: translate(-580%, 0px);
          animation: translate4 0.2s ease forwards;
          animation-delay: 0.6s;
       }
       &:nth-child(5) {
-         transform: translate(-590%, 0px);
+         transform: translate(-690%, 0px);
          animation: translate5 0.2s ease forwards;
          animation-delay: 0.8s;
       }
       &:nth-child(6) {
-         transform: translate(-700%, 0px);
+         transform: translate(-800%, 0px);
          animation: translate6 0.2s ease forwards;
          animation-delay: 1s;
       }
       &:nth-child(7) {
-         transform: translate(-810%, 0px);
+         transform: translate(-910%, 0px);
 
          animation: translate7 0.2s ease forwards;
          animation-delay: 1.2s;
@@ -198,7 +216,7 @@ $Oswald: "Oswald",sans-serif;
 
 @keyframes translate1 {
    0% {
-      transform: translate(-150%, 0px);
+      transform: translate(-250%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -207,7 +225,7 @@ $Oswald: "Oswald",sans-serif;
 
 @keyframes translate2 {
    0% {
-      transform: translate(-260%, 0px);
+      transform: translate(-360%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -215,7 +233,7 @@ $Oswald: "Oswald",sans-serif;
 }
 @keyframes translate3 {
    0% {
-      transform: translate(-370%, 0px);
+      transform: translate(-470%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -223,7 +241,7 @@ $Oswald: "Oswald",sans-serif;
 }
 @keyframes translate4 {
    0% {
-      transform: translate(-480%, 0px);
+      transform: translate(-580%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -231,7 +249,7 @@ $Oswald: "Oswald",sans-serif;
 }
 @keyframes translate5 {
    0% {
-      transform: translate(-590%, 0px);
+      transform: translate(-690%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -239,7 +257,7 @@ $Oswald: "Oswald",sans-serif;
 }
 @keyframes translate6 {
    0% {
-      transform: translate(-700%, 0px);
+      transform: translate(-800%, 0px);
    }
    100% {
       transform: translate(-0, 0px);
@@ -247,7 +265,7 @@ $Oswald: "Oswald",sans-serif;
 }
 @keyframes translate7 {
    0% {
-      transform: translate(-810%, 0px);
+      transform: translate(-910%, 0px);
    }
    100% {
       transform: translate(-0, 0px) rotate(0deg);
@@ -283,8 +301,9 @@ margin-bottom: 30px;
       align-self: center;
       margin-bottom: 20px;
       font-weight: 700;
-      font-size: 32px;
+      font-size: 24px;
    color: palevioletred;
+   text-transform: uppercase;
    transform: translate(-200%, 0px);
    animation: trans1 0.8s ease forwards 2.7s;
    }
@@ -1185,6 +1204,9 @@ font-size: 18px;
 .page {
 
    &__section04 {
+   opacity:0;
+   visibility: hidden;
+   animation: visible 0.5s ease forwards 3s;
    }
 }
 .section04 {
@@ -1284,3 +1306,74 @@ font-size: 18px;
 
    }
 }
+
+@keyframes visible{
+   0%{
+      visibility: hidden;
+      opacity: 0;
+   }
+   100%{
+      visibility: visible;
+      opacity: 1;
+   }
+}
+
+
+//!!!!!! FOOTER
+
+.footer {
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   padding-bottom: 30px;
+   
+   gap: 30px;
+   margin-bottom: 30px;
+   &__title {
+      font-weight: 700;
+      font-size: 30px;
+      text-align: center;
+      margin-bottom: 20px;
+   }
+
+   &__pic {
+      position: relative;
+flex: 0 1 100%;
+height: 800px;
+margin-bottom: 30px;
+aspect-ratio: 1 / 1;
+background-color: purple;
+z-index: 10;
+//width: 300px;
+//height:300px ;
+border-radius: 50%;
+overflow: hidden;
+transform: translate(-200%, 0px);
+animation: trans2 0.8s ease forwards 3s;
+@media(max-width:600px){
+  height: auto;
+}
+   }
+
+   &__img {
+opacity: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    object-fit: cover;
+    &:active{
+      opacity: 1;
+    }
+   }
+}
+.button {
+   width: 50%;
+   align-self: center;
+}
+
+
+
+
+
